--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -9,7 +9,7 @@
 .bkg-color {
 	background-color: #485461;
 	// background-image: linear-gradient(135deg, #485461 0%, #28313b 74%);
-	background-image: linear-gradient(135deg, white -50%, black 70%);
+	background-image: linear-gradient(135deg, #485461 -50%, #101418 74%);
 }
 
 .visually-hidden {
