--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,7 +1,7 @@
 //===== Переменные ----------------------------
 
 $accent: #f0314b; // акцентный цвет
-$text: white; // текстовый цвет
+$text: #eee; // текстовый цвет
 $dark: #202328; // темный цвет
 $deep: #171a1a; // глубокий цвет
 $dark-header: #6f7a8b; // цвет заголовка
