--- a/scss/blocks/index/_brand.scss
+++ b/scss/blocks/index/_brand.scss
@@ -1,9 +1,9 @@
 .brand {
-    max-width: 40rem;
-    text-align: center;
-    color: #fff;
-    padding: 0 2rem;
-    margin-top: 800px;
+	max-width: 40rem;
+	text-align: center;
+	color: #fff;
+	padding: 0 2rem;
+	margin-top: 800px;
 }
 
 .brand__title {
@@ -13,5 +13,35 @@
 
 .brand_subtitle-pink {
 	color: $accent;
-	font-size: -webkit-xxx-large
+	font-size: -webkit-xxx-large;
+}
+
+.slide-top {
+	-webkit-animation: slide-top 1000ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	animation: slide-top 1000ms cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+
+@-webkit-keyframes slide-top {
+	0% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+
+	100% {
+		-webkit-transform: translateY(-100px);
+		transform: translateY(-100px);
+	}
+}
+
+@keyframes slide-top {
+	0% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+
+	100% {
+		-webkit-transform: translateY(-100px);
+		transform: translateY(-100px);
+	}
 }
