--- a/scss/blocks/index/_header.scss
+++ b/scss/blocks/index/_header.scss
@@ -12,8 +12,8 @@
 header {
 	min-height: 100vh;
 	width: 100%;
-	background:  linear-gradient(180deg, rgb(255 255 255 / 0%) 39%, rgb(0 0 0) 96%) center center/100% 100vh no-repeat,
-	no-repeat center / cover;
+	background: linear-gradient(180deg, rgb(255 255 255 / 0%) 39%, rgb(43, 51, 59, 0.8) 96%) center center/100% 100vh no-repeat,
+	url('/images/index/brand.jpg') no-repeat center / cover;
 	position: relative;
 }
 
@@ -23,7 +23,7 @@ header {
 	height: 100%;
 	top: 0;
 	left: 0;
-	background-color: rgba(43, 51, 59, 0.8);
+	background-color: rgba(32, 38, 43, 0.8);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -53,7 +53,7 @@ header {
 	font-weight: 300;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	transition: 0.3s;
+	transition: $transition;
 	opacity: 0;
 	transform: translateY(10px);
 	animation: hide 0.5s forwards ease;
@@ -102,7 +102,7 @@ header {
 	transform-style: preserve-3d;
 	transform-origin: left;
 	transition: 0.5s;
-	background-color: rgba(163, 157, 157, 0.664);
+	background-color: rgba(163, 157, 157, 0.404);
 }
 
 .shadow.one {
