--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -47,3 +47,36 @@
 			0 -1px 0 rgba(255, 255, 255, 0.1);
 	}
 }
+
+@font-face {
+	font-family: 'Raleway-Regular';
+	font-style: normal;
+	src: url(../fonts/raleway/raleway-v22-cyrillic-regular.woff2);
+}
+
+@font-face {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 300;
+	src: url(../fonts/roboto/roboto-v29-cyrillic-300.woff2);
+}
+@font-face {
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 500;
+	src: url(../fonts/roboto/roboto-v29-cyrillic-500.woff2);
+}
+
+@font-face {
+	font-family: 'Tangerine';
+	font-style: normal;
+	font-weight: 400;
+	src: url(../fonts/tangerine-v17-latin/tangerine-v17-latin-regular.woff2);
+}
+
+@font-face {
+	font-family: 'Tangerine';
+	font-style: normal;
+	font-weight: 700;
+	src: url(../fonts/tangerine-v17-latin/tangerine-v17-latin-700.woff2);
+}
