--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,7 +16,7 @@ $text-light: #999999;
 //---------- Текст --------------------------------
 
 $regular-text: 16px; // обычный текст
-$small-text: 14px; // обычный текст
+$small-text: 14px; // текст
 $lineheight: 1.75; // высота шрифта
 $userfont: awe; // пользовательский шрифт
 
@@ -28,3 +28,6 @@ $radius-style: 0 5px;
 //---------- Анимация------------------------------
 
 $transition: .25s ease-out;
+
+//---------- Шрифты------------------------------
+
