--- a/scss/blocks/catalog/_product.scss
+++ b/scss/blocks/catalog/_product.scss
@@ -1,29 +1,26 @@
-.catalog {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
 .product {
-	width: 1150px;
+	width: 1200px;
 	display: block;
+	margin-top: -4rem;
 	box-sizing: border-box;
 
 	&__info {
 		padding-bottom: 1rem;
+		padding-right: 10rem;
 	}
 
 	&__title {
 		color: $text;
 		text-align: center;
-		font-family:'Times New Roman', Times, serif;
 		font-size: 2.5rem;
-
+		font-family: 'Tangerine';
 	}
 
 	&__text {
+		padding-top: 0.5rem;
 		color: $text-light;
 		text-align: center;
-        font-family:'Times New Roman', Times, serif;
+		font-family: 'Raleway-Regular';
+		font-variant: all-petite-caps;
 	}
 }
