--- a/scss/blocks/catalog/_card.scss
+++ b/scss/blocks/catalog/_card.scss
@@ -7,7 +7,7 @@
 .card {
 	position: relative;
 	width: 17rem;
-	height: 21rem;
+	height: 19rem;
 	margin: 0.7rem;
 	border-radius: 1rem;
 	border: .1rem solid transparent;
@@ -15,42 +15,48 @@
 	overflow: hidden;
 	transition: .5s ease-out;
 
-	
-
 	&:hover {
 		border: .1rem solid $accent;
 		transform: scale(1.05);
 	}
 
 	&__content {
-		// position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
 		z-index: 200;
 		display: flex;
+		position: absolute;
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
 	}
 
-	// &__img {
-	// 	max-width: 100%;
-	// 	height: 9rem;
-	// }
-
-	&__title {
-		color: $text-light;
-		transition-delay: .2s;
-		margin-top: 3rem;
-	}
-
-	&__title,
+	
 	&__body,
 	&__footer {
-		transform: translateY(8rem);
+		transform: translateY(4rem);
+		transition: .3s ease-in-out;
+	}
+
+	&:hover &__title,
+	&:hover &__body,
+	&:hover &__footer {
+		transform: translateY(-1.8rem);
+		transition: .4s ease-in-out;
+	}
+
+	&__img {
+		max-width: 100%;
+		height: 12rem;
+	}
+
+	&__title {
+		padding-top: 3rem;
+		color: $text-light;
 		transition: .5s ease-in-out;
+		font-family: 'Raleway-Regular';
 	}
 
 	&__body {
@@ -58,16 +64,9 @@
 		display: flex;
 		justify-content: space-around;
 		align-items: center;
-		transition-delay: .2s;
+		transition: .4s ease-in-out;
+		// transition-delay: .3s;
 	}
-
-	&:hover &__img,
-	&:hover &__title,
-	&:hover &__body,
-	&:hover &__footer {
-		transform: translateY(0);
-	}
-
 
 	&__price {
 		font: 1.2rem;
@@ -76,8 +75,8 @@
 	}
 
 	&__footer {
-		transition-delay: .3s;
-		margin-bottom: 0.5rem;
+		transition: .3s ease-in-out;
+
 	}
 }
 
@@ -90,21 +89,4 @@
 	color: gold;
 }
 
-.btn {
-	padding: 1rem 2rem;
-	background-color: unset;
-	border: none;
-	outline: none;
-	border-radius: 2rem;
-	color: $text;
-	cursor: pointer;
-}
-
-.btn-border {
-	border: .1rem solid $accent;
-}
-
-.btn-success {
-	background-color: $accent;
-}
 
