--- a/scss/blocks/catalog/_menu.scss
+++ b/scss/blocks/catalog/_menu.scss
@@ -1,30 +1,46 @@
-.aside {
-	width: 250px;
+.menu {
+	width: 200px;
 	height: 650px;
-	border-right: 0.5px solid $dark-header;
-	display: block;
-	
+	border-right: .1rem solid $dark-header;
 
-
-	&__title {
-		color: rgb(49 240 111);
-		font-size: 1.2rem;
-		font-family:'Times New Roman', Times, serif;
-
+	&__item {
+		padding-bottom: 1rem;
+		font-family: 'Raleway-Regular';
+		font-size: x-large;
 	}
-
-	&__list {
-		color: #eee;
-		padding: 0.7rem 1rem;
-		text-transform: uppercase;
-		transition: $transition;
-		font-family:'Times New Roman', Times, serif;
+	
+	&__navigation {
+		color: white;
+		font-size: 1.2rem;
+		text-decoration: none;
+		border-bottom: .1rem solid whitesmoke;
 
 		&:hover {
 			color: $accent;
 			cursor: pointer;
-
 		}
+	}
+
+	&__items {
+		color: white;
+		font-size: 1.2rem;
+		font-family: 'Raleway-Regular';
+		font-size: x-large;
+		text-decoration: none;
+
+		&:hover {
+			color: $accent;
+			cursor: pointer;
+		}
+	}
+
+	&__list {
+		color: gray;
+		padding: 0.7rem 1rem;
+		transition: $transition;
+		font-family: 'Raleway-Regular';
+		font-size: small;
+		font-style: italic;
 	}
 }
 
